2007-10-23  Lucas Rocha  <lucasr@gnome.org>

	* gconf/gconf-sanity-check.c (main): fix regression that requires a
	defined default DISPLAY in order to run sanity check program when it
	shouldn't. 

2007-10-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Post release bump.

============================ 2.20.1 ==========================

2007-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* examples/Makefile.am: Dist basic-gconf-app.schemas too.

2007-10-02  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/gconf/tmpl/gconf-client.sgml: Note that the dir passed
	to gconf_client_add_dir() must not end with a slash. (Stefan Kost)
	Closes bug #301298.

============================= 2.20.0 ==========================

2007-09-19  Kjartan Maraas  <kmaraas@gnome.org>

	* Release 2.20.0

2007-07-18  Jaap Haitsma  <jaap@haitsma.org>

	Reviewed by: Ray Strode

	* backends/xml-dir.c: (dir_load_doc), (dir_make_new_entry),
	(dir_fill_cache_from_doc):
	* backends/xml-entry.c: (node_set_schema_value), (node_set_value),
	(find_schema_subnode_by_locale), (schema_subnode_extract_data),
	(schema_node_extract_value), (node_extract_value), (my_xmlSetProp),
	(my_xmlGetProp):
	* gconf/gconftool.c: (get_list_value_from_xml),
	(get_car_cdr_value), (get_pair_value_from_xml),
	(get_values_from_xml), (process_entry), (extract_global_info),
	(process_locale_info), (get_schema_from_xml), (process_list),
	(do_load_file): Remove a bunch of compiler warnings by performing casts.
	Fixes bug #452372

2007-07-05  Sven Herzberg  <herzi@gnome-de.org>

	Reviewed by Christian Persch.

	* autogen.sh: require the same version of automake as configure.in
	does

2007-06-23  Christian Persch  <chpe@gnome.org>

	* configure.in: Re-add AM_MAINTAINER_MODE for now until there's
	concensus about removing it. Bug #450450.

2007-06-23  Christian Persch  <chpe@gnome.org>

	* configure.in: Post-release version bump.

======= 2.19.1 ============================================
