@@ -1,3 +1,10 @@
+2007-10-22  Owen Taylor  <otaylor@redhat.com>
+
+	* gconf/Makefile.am (install-data-local): If there is an existing
+	path configuration file, don't overwrite it, to make it possible,
+	for example, to have a jhbuild that properly deals with
+	system-installed schemas. (#489193)
+
 2007-10-23  Lucas Rocha  <lucasr@gnome.org>
 
 	* gconf/gconf-sanity-check.c (main): fix regression that requires a
